fix order wrap

--- a/keto_diet/assets/css/style.css
+++ b/keto_diet/assets/css/style.css
@@ -847,6 +847,7 @@ hr {
 
 .order .container {
   max-width: 400px;
+  padding: 0 15px;
 }
 
 .order__title {
@@ -2555,6 +2556,11 @@ hr {
     padding: 0 15px;
   }
 
+  .order .container {
+    max-width: 400px;
+    padding: 0 15px;
+  }
+
   .quiz .container {
     max-width: 750px;
   }
@@ -2602,6 +2608,11 @@ hr {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+
+  .order .container {
+    max-width: 400px;
+    padding: 0 15px;
   }
 
   .main--start .footer {
